Extract Spark integratio test from worker module